updates to correct horizontal scroll at min screen size mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -33,6 +33,12 @@ body{
 /* My custom heading font */
     /* Big */
 
+.myCustomStandOutFont_large {
+  font-family: 'Poppins', sans-serif;
+  font-size: 50px;
+  font-weight:500;
+}
+
 @media screen and (min-width: 1001px) {
     div.myCustomStandOutFont_large {
         font-family: 'Poppins', sans-serif;
@@ -41,7 +47,7 @@ body{
     }
   }
   
-  @media screen and (max-width: 1000px) {
+  @media screen and (min-width: 400px) {
     div.myCustomStandOutFont_large {
         font-family: 'Poppins', sans-serif;
         font-size: 60px;
